[package]
name = "zilog_z80"
version = "0.10.0"
edition = "2021"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "Zilog Z80 Emulator."
keywords = ["emulation", "emulator", "Zilog", "Z80", "CPU"]
categories = ["emulators"]
license = "MIT"
repository = "https://github.com/nicolasbauw/ZilogZ80"
readme = "README.md"
exclude = ["zexdoc_results.txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"

[target.'cfg(windows)'.dependencies]
spin_sleep = "1.0.0"